welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:7: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
 marqueSol(c)
          ^FlowerPot:9: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
 marqueSol(Color.yellow)
          ^FlowerPot:12: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
 marqueSol(c)
          ^FlowerPot:14: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
 marqueSol(c)
          ^FlowerPot:18: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
 marqueSol(c)		
          ^FlowerPot:21: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.red)
              ^FlowerPot:23: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.cyan)
              ^FlowerPot:28: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.orange)
              ^FlowerPot:32: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.green)
              ^FlowerPot:34: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.Pink)
              ^